--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -34,11 +34,13 @@ world:
 
   # Spawn location for game start
   spawn:
-    x: 0.0
-    y: 64.0
-    z: 0.0
-    yaw: 0.0
-    pitch: 0.0
+    min:
+      x: -200
+      z: -200
+    max:
+      x: 200
+      z: 200
+    y: 64
 
   # Waiting area location
   waiting:
